reset the file path & add Lookbook page

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
             <div id="overlay_t">
                 <div id="popup_layer">
                     <ul class = "popup_list" type ="none">
-                        <li><a href="./login.html">Login</a></li>
+                        <li><a href="./extends-pages/login.html">Login</a></li>
                         <!-- AJAX 처리 필요 -->
-                        <li><a href = "./shop.html">Shop</a></li>
+                        <li><a href = "./extends-pages/shop.html">Shop</a></li>
+                        <li><a href = "./extends-pages/Lookbook.html">Lookbook</a></li>
                         <li><a>Order</a></li>
                         <li><a>Cart</a></li>
-                        <li><a>Lookbook</a></li>
                     </ul>
                 </div>
             </div>
