--- a/extends-pages/login.html
+++ b/extends-pages/login.html
@@ -8,17 +8,17 @@
         <title> XX_unXpected </title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="./page-assets/css/style.css" />
+        <link rel="stylesheet" href="../page-assets/css/style.css" />
 
-        <link rel="SHORTCUT ICON" href="./images/main/XXX-logo.ico" />
-	    <link rel="icon" href="./images/main/XXX-logo.ico" type="image/ico" />
+        <link rel="SHORTCUT ICON" href="../images/main/XXX-logo.ico" />
+	    <link rel="icon" href="../images/main/XXX-logo.ico" type="image/ico" />
     </head>
 
     <!-- body -->
     <body>
         <div class="header" id ="XXXheader">
             <!-- 홈 로고 설정 -->
-            <a href = "index.html" class="home"><img src = "./images/main/XXX-logo.png" class="img-responsive"></a>
+            <a href = "../index.html" class="home"><img src = "../images/main/XXX-logo.png" class="img-responsive"></a>
         </div>
 
         <div class ="page">
@@ -27,7 +27,7 @@
                     <table class="login">
                             <tr>
                                 <td><br></td>
-                                <td rowspan="5"><div class="login-submit"><a><input type="image" src="./images/login/login-ico.png" alt="Submit" value="Login" class="submitbtn"></a></div></td>
+                                <td rowspan="5"><div class="login-submit"><a><input type="image" src="../images/login/login-ico.png" alt="Submit" value="Login" class="submitbtn"></a></div></td>
                             </tr>
                             <tr>
                                 <td><input type="text" name="userid" placeholder="User-ID" class="login-text"></td>
@@ -64,12 +64,12 @@
         <!-- scripts -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         
-        <script src="./page-assets/js/jquery.poptrox.min.js"></script>
-	    <script src="./page-assets/js/jquery.scrolly.min.js"></script>
-    	<script src="./page-assets/js/jquery.scrollex.min.js"></script>
-    	<script src="./page-assets/js/skel.min.js"></script>
-    	<script src="./page-assets/js/util.js"></script>
-        <script src="./page-assets/js/main.js"></script>
+        <script src="../page-assets/js/jquery.poptrox.min.js"></script>
+	    <script src="../page-assets/js/jquery.scrolly.min.js"></script>
+    	<script src="../page-assets/js/jquery.scrollex.min.js"></script>
+    	<script src="../page-assets/js/skel.min.js"></script>
+    	<script src="../page-assets/js/util.js"></script>
+        <script src="../page-assets/js/main.js"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
