remove img slider border

--- a/extends-pages/Lookbook.html
+++ b/extends-pages/Lookbook.html
@@ -8,6 +8,8 @@
         <title> XX_unXpected </title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+
         <link rel="stylesheet" href="../page-assets/css/style.css" />
 
         <link rel="SHORTCUT ICON" href="../images/main/XXX-logo.ico" />
@@ -25,12 +27,12 @@
         
         <div class="slide">
             <ul class="slide_ul">
-                <li><a href="#"><img src="../images/Lookbook/1280.jpg" alt="dane"></a></li>
-                <li><a href="#"><img src="../images/Lookbook/1280x720.jpg" alt="dane"></a></li>
-                <li><a href="#"><img src="../images/Lookbook/rand.jpg" alt="dane"></a></li>
-                <li><a href="#"><img src="../images/Lookbook/1280.jpg" alt="dane"></a></li>
-                <li><a href="#"><img src="../images/Lookbook/1280x720.jpg" alt="dane"></a></li>
-                <li><a href="#"><img src="../images/Lookbook/rand.jpg" alt="dane"></a></li>
+                <li><a href="#"><img src="../images/Lookbook/1280.jpg" alt="dane" title="Seoul Fashion week"></a></li>
+                <li><a href="#"><img src="../images/Lookbook/1280x720.jpg" alt="dane" title="Paris Fashion week"></a></li>
+                <li><a href="#"><img src="../images/Lookbook/rand.jpg" alt="dane" title="Alexander Wang S/S"></a></li>
+                <li><a href="#"><img src="../images/Lookbook/1280.jpg" alt="dane" title="GUCCI"></a></li>
+                <li><a href="#"><img src="../images/Lookbook/1280x720.jpg" alt="dane" title="Hye-in Seo Show(cont. blue)"></a></li>
+                <li><a href="#"><img src="../images/Lookbook/rand.jpg" alt="dane" title="models"></a></li>
             </ul>
         </div>
 
@@ -54,6 +56,8 @@
     	<script src="../page-assets/js/jquery.scrollex.min.js"></script>
     	<script src="../page-assets/js/skel.min.js"></script>
         <script src="../page-assets/js/util.js"></script>
+        <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+
         <script src="../page-assets/js/main.js"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
