reset carousel indicator position

--- a/extends-pages/Lookbook.html
+++ b/extends-pages/Lookbook.html
@@ -35,16 +35,28 @@
             <!-- The slideshow -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../images/Lookbook/model1.jpg" alt="Los Angeles">
+                    <img src="../images/Lookbook/model1.jpg" alt="Alexander Wang">
+                    <div class="carousel-caption">    
+                        <p>Alexander Wang 17 S/S</p>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../images/Lookbook/model2.jpg" alt="Chicago">
+                    <img src="../images/Lookbook/model2.jpg" alt="SL">
+                    <div class="carousel-caption">    
+                        <p>Saint Laurent 17 S/S</p>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../images/Lookbook/model3.jpg" alt="New York">
+                    <img src="../images/Lookbook/model3.jpg" alt="Junya">
+                    <div class="carousel-caption">    
+                        <p>Junya Watanabe 17 S/S</p>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../images/Lookbook/model4.jpg" alt="New York">
+                    <img src="../images/Lookbook/model4.jpg" alt="Comme de x Nike">
+                    <div class="carousel-caption">    
+                        <p>Comme de garcons x Nike 17 S/S</p>
+                    </div>
                 </div>
             </div>
         </div>          
