--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <div class= "container">
                 <div id = "XXX_image" class ="main style1 dark fullscreen">
-                        <img src = "./images/main/main-img.jpeg" class="img-responsive">
+                        <img src = "./images/main/main-img.jpeg" class="img-responsive img-thumbnail">
                 </div>
             </div>
 
