--- a/extends-pages/shop.html
+++ b/extends-pages/shop.html
@@ -161,14 +161,16 @@
                 </ul>                
             </div>
 
-            <div id="page-list" class="text-center sticky-bottom">
-                <ul class="pagination">
-                    <li class="page-item"><a class="page-link" href="#">Prev</a></li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item"><a class="page-link" href="#">Next</a></li>
-                </ul>
+            <div class="navigation">
+                <div class="pagination">
+                    <span>Page x of x</span>
+                    <span class="current">1</span>
+                    <a href='#' class="inactive">2</a>
+                    <a href='#' class="inactive">3</a>
+                    <a href='#' class="inactive">4</a>
+                    <a href="#">Next &rsaquo;</a>
+                    <a href='#'>Last &raquo;</a>
+                </div>
             </div>
     
         <!-- scripts -->
