--- a/extends-pages/shop.html
+++ b/extends-pages/shop.html
@@ -163,12 +163,12 @@
 
             <div class="navigation">
                 <div class="pagination">
-                    <span>Page x of x</span>
-                    <span class="current">1</span>
+                    <a href='#'>Prev</a>
+                    <a href='#'>1</a>
                     <a href='#' class="inactive">2</a>
                     <a href='#' class="inactive">3</a>
                     <a href='#' class="inactive">4</a>
-                    <a href="#">Next &rsaquo;</a>
+                    <a href="#">Next </a>
                     <a href='#'>Last &raquo;</a>
                 </div>
             </div>
