add basic sign-up  settings

--- a/extends-pages/login.html
+++ b/extends-pages/login.html
@@ -51,7 +51,7 @@
                 <div id="set-id">
                     <ul class="find-create" type="none">
                         <li>
-                            <a href="#">Sign up</a>
+                            <a href="./extends-login/sign-up.html">Sign up</a>
                         </li>
                         <li>
                             <a href="#">forgot your ID/PW ?</a>
