reset page name

--- a/extends-pages/extends-login/sign-up.html
+++ b/extends-pages/extends-login/sign-up.html
@@ -81,6 +81,7 @@
                         </div>
                     </div>
 
+                    <!-- 이용약관 동의서 -->
                     <div class="form-group">
                         <label for="tems-of-service" class="col-md-12 control-label">
                             Terms of service agreement
@@ -230,9 +231,10 @@
                         </div>    
                     </div>
 
+                    <!-- 개인정보 수집/활용 동의서 -->
                     <div class="form-group">
                             <label for="personal-infornation-collection" class="col-md-12 control-label">
-                                Personal information collection agreement
+                                Personal information collection/usage agreement
                             </label>
                             <div class="col-md-12">
                                 <textarea class="col-md-12" id="agreement" readonly resize="none">
