--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                     <ul class = "popup_list" type ="none">
                         <li><a href="./extends-pages/login.html">Login</a></li>
                         <!-- AJAX 처리 필요 -->
-                        <li><a href = "./extends-pages/shop.html">Shop</a></li>
-                        <li><a href = "./extends-pages/Lookbook.html">Lookbook</a></li>
+                        <li><a href = "./extends-pages/category.html">Category</a></li>
+                        <li><a href = "./extends-pages/lookbook.html">Lookbook</a></li>
                         <li><a>Order</a></li>
                         <li><a>Cart</a></li>
                     </ul>
